--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Create.razor
@@ -1,10 +1,11 @@
 ﻿@page "/admin/teams/create"
-@using PredictionLeague.Contracts.Admin.Teams
 
 @attribute [Authorize(Roles = "Administrator")]
 
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
+
+@using PredictionLeague.Contracts.Admin.Teams
 
 <PageTitle>Create Team</PageTitle>
 
@@ -14,6 +15,7 @@
         <EditForm Model="_model" OnValidSubmit="HandleCreateTeam">
             <FluentValidationValidator />
             <ApiError Message="@_errorMessage" />
+            <ApiSuccess Message="@_successMessage" />
 
             <div class="mb-3">
                 <label for="name" class="form-label text-white">Team Name</label>
@@ -36,19 +38,31 @@
     private readonly CreateTeamRequest _model = new();
     private bool _isBusy;
     private string? _errorMessage;
+    private string? _successMessage;
 
     private async Task HandleCreateTeam()
     {
         _isBusy = true;
         _errorMessage = null;
+        _successMessage = null;
 
         var response = await Http.PostAsJsonAsync("api/teams/create", _model);
         if (response.IsSuccessStatusCode)
-            NavigationManager.NavigateTo("/admin/teams");
+        {
+            _successMessage = "Team created successfully!";
+            StateHasChanged();
+
+            await Task.Delay(1500);
+
+            Back();
+        }
         else
+        {
             _errorMessage = "There was an error creating the team.";
+        }
 
         _isBusy = false;
+        StateHasChanged();
     }
 
     private void Back() => NavigationManager.NavigateTo("/admin/teams");
