--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
@@ -23,7 +23,7 @@
                                     Admin
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><NavLink class="dropdown-item" href="/admin/leagues">Manage Leagues</NavLink></li>
+                                    <li><NavLink class="dropdown-item" href="/leagues">Manage Leagues</NavLink></li>
                                     <li><NavLink class="dropdown-item" href="/admin/seasons">Manage Seasons</NavLink></li>
                                     <li><NavLink class="dropdown-item" href="/admin/teams">Manage Teams</NavLink></li>
                                 </ul>
@@ -69,7 +69,7 @@
 
                             @if (_isAdminMenuOpen)
                             {
-                                <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/leagues">Manage Leagues</NavLink></li>
+                                <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/leagues">Manage Leagues</NavLink></li>
                                 <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/seasons">Manage Seasons</NavLink></li>
                                 <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/teams">Manage Teams</NavLink></li>
                             }
