--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Account/Details.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Account/Details.razor
@@ -1,8 +1,9 @@
 ﻿@page "/account/details"
-@using PredictionLeague.Contracts.Account
 
 @inject HttpClient Http
-@inject NavigationManager NavigationManager ;
+@inject NavigationManager NavigationManager
+
+@using PredictionLeague.Contracts.Account
 
 <PageTitle>My Details</PageTitle>
 
@@ -44,7 +45,7 @@
                         <div class="mb-3">
                             <label for="phoneNumber" class="form-label text-white">Phone Number (UK Mobile)</label>
                             <InputText id="phoneNumber" class="form-control" @bind-Value="_model.PhoneNumber" />
-                            <StyledValidationMessage For="@(() => _model.PhoneNumber)" />
+                            <StyledValidationMessage For="@(() => _model.PhoneNumber!)" />
                         </div>
                         
                         <BackAndSaveButtons BackText="Back to Dashboard" OnBackClick="Back" BusyText="Saving..." IsBusy="_isBusy" ></BackAndSaveButtons>
