Update Leagues Namespace

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/List.razor
@@ -3,7 +3,7 @@
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 
-@using PredictionLeague.Contracts.Admin.Leagues
+@using PredictionLeague.Contracts.Leagues
 
 <PageTitle>Manage Leagues</PageTitle>
 
