Add Async to All Async Method Names

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
@@ -100,7 +100,7 @@
     
     private async Task LogoutUser()
     {
-        await AuthenticationService.Logout();
+        await AuthenticationService.LogoutAsync();
         NavigationManager.NavigateTo("/", forceLoad: true);
     }
 }
