--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Error.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Error.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Error"
+
 @using Microsoft.AspNetCore.Http
 @using System.Diagnostics
 
@@ -32,6 +33,5 @@
     private string? RequestId { get; set; }
     private bool ShowRequestId => !string.IsNullOrEmpty(RequestId);
 
-    protected override void OnInitialized() =>
-        RequestId = Activity.Current?.Id ?? HttpContext?.TraceIdentifier;
+    protected override void OnInitialized() => RequestId = Activity.Current?.Id ?? HttpContext?.TraceIdentifier;
 }
