--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
@@ -15,7 +15,7 @@
             <h3 class="fw-bold text-white mb-0">Create New Season</h3>
         </div>
 
-        <EditForm Model="_model" OnValidSubmit="HandleCreateSeason">
+        <EditForm Model="_model" OnValidSubmit="HandleCreateSeasonAsync">
             <FluentValidationValidator />
             <ApiError Message="@_errorMessage" />
             <ApiSuccess Message="@_successMessage" />
@@ -54,7 +54,7 @@
     private string? _errorMessage;
     private string? _successMessage;
 
-    private async Task HandleCreateSeason()
+    private async Task HandleCreateSeasonAsync()
     {
         _isBusy = true;
         _errorMessage = null;
